--- a/roles/promtail/defaults/main.yml
+++ b/roles/promtail/defaults/main.yml
@@ -52,3 +52,4 @@ __is_sysv: "{{ ansible_service_mgr != 'systemd' | default(false) }}"
 
 promtail_bin_path: /usr/local/bin/promtail
 promtail_conf_path: /etc/promtail/config.yml
+promtail_log_file: "/var/log/promtail.log"
