--- a/roles/certbot/tasks/main.yml
+++ b/roles/certbot/tasks/main.yml
@@ -37,6 +37,20 @@
     content: "{{ certbot_credentials_content }}"
   when: certbot_credentials_content | length > 0
 
+- name: Ensure hooks directories exist
+  ansible.builtin.file:
+    path: "{{ __path }}"
+    state: directory
+    owner: root
+    group: "{{ __root_group }}"
+    mode: 0750
+  vars:
+    __path: "/etc/letsencrypt/renewal-hooks/{{ item.type }}"
+  loop: "{{ certbot_renew_hooks }}"
+  loop_control:
+    label: "{{ __path }}"
+  tags: ["hooks"]
+
 - name: Copy renew hooks
   copy:
     content: "{{ item.content }}"
