--- a/host_vars/drepi/postfix.yml
+++ b/host_vars/drepi/postfix.yml
@@ -52,3 +52,11 @@ postfix_main_config:
     line: "unknown_local_recipient_reject_code = 550"
   - regexp: "^#?virtual_alias_maps"
     line: "virtual_alias_maps = hash:/etc/postfix/virtual"
+  - regexp: "^#?smtpd_use_tls"
+    line: "smtpd_use_tls = yes"
+  - regexp: "^#?smtpd_tls_cert_file"
+    line: "smtpd_tls_cert_file = /etc/letsencrypt/live/{{ postfix_hostname }}/fullchain.pem"
+  - regexp: "^#?smtpd_tls_key_file"
+    line: "smtpd_tls_key_file = /etc/letsencrypt/live/{{ postfix_hostname }}/privkey.pem"
+  - regexp: "^#?smtpd_tls_security_level"
+    line: "smtpd_tls_security_level = may"
