--- a/host_vars/truenas-certbot/certbot.yml
+++ b/host_vars/truenas-certbot/certbot.yml
@@ -8,10 +8,10 @@ certbot_pkgs: ["certbot"]
 certbot_extra_pkgs: ["certbot-dns-hetzner"]
 certbot_domains:
   - "truenas.{{ domains['hb'] }}"
-certbot_credentials_path: "/etc/letsencrypt/hetzner.ini"
-certbot_credentials_content: "{{ hostvars['webgw01'].certbot_credentials_content }}"
+certbot_credentials_path: "{{ certbot_credentials_path_hetzner }}"
+certbot_credentials_content: "{{ hostvars['webgw01'].certbot_credentials_content_hetzner }}"
 
-certbot_generate_command: "{{ hostvars['webgw01'].certbot_generate_command }}"
+certbot_generate_command: "{{ certbot_generate_command_hetzner }}"
 
 certbot_deploy_api_key: "{{ vault_certbot_deploy_api_key }}"
 certbot_deploy_fullchain_path: "/mnt/ssd/iocage/jails/certbot/root/etc/letsencrypt/live/{{ certbot_domains[0] }}/fullchain.pem"
