Fix rompi node exporter firewall

--- a/host_vars/rompi/vars.yml
+++ b/host_vars/rompi/vars.yml
@@ -2,3 +2,7 @@
 
 serial_proxy_src: "/dev/ttyUSB0"
 serial_proxy_port: 8888
+
+node_exporter_allow_ips:
+  - "{{ wg_net.mt.cidr }}"
+  - "{{ wg_net.mt.cidr6 }}"
