--- a/roles/chezmoi/tasks/main.yml
+++ b/roles/chezmoi/tasks/main.yml
@@ -1,20 +1,16 @@
 ---
 
-- name: Install chezmoi (deb)
-  become: true
-  apt:
-    deb: "https://github.com/twpayne/chezmoi/releases/download/v{{ chezmoi_version }}/chezmoi_{{ chezmoi_version }}_linux_amd64.deb"
-    state: present
-  when: ansible_os_family == 'Debian'
-  tags: "install"
+- name: Install from GitHub
+  ansible.builtin.include_tasks: install_github.yml
+  when: ansible_distribution not in ['Archlinux', 'Fedora']
+  tags: ["install"]
 
-- name: Install chezmoi
-  become: true
+- name: Install chezmoi using package manager
   package:
     name: chezmoi
     state: present
-  when: ansible_os_family != 'Debian'
-  tags: "install"
+  when: ansible_distribution in ['Archlinux', 'Fedora']
+  tags: ["install"]
 
 - name: Ensure overrides dir exists
   file:
