--- a/group_vars/webgw/certbot.yml
+++ b/group_vars/webgw/certbot.yml
@@ -9,9 +9,11 @@ certbot_domains_cloudflare:
   - "{{ domains['dv'] }},*.{{ domains['dv'] }}"
   - "{{ domains['ti'] }},*.{{ domains['ti'] }}"
 
-certbot_renew_hooks:
+__group_certbot_renew_hooks:
   - name: restart-nginx
     type: deploy
     content: |
-      #/bin/sh
+      #!/bin/sh
       systemctl restart nginx
+
+certbot_renew_hooks: "{{ (__group_certbot_renew_hooks | default([])) + (__host_certbot_renew_hooks | default([])) }}"
