--- a/group_vars/minio/minio.yml
+++ b/group_vars/minio/minio.yml
@@ -27,7 +27,7 @@ minio_client_config:
       api: "S3v4"
       path: "auto"
     truenas:
-      url: "{{ s3_url }}"
+      url: "https://truenas.{{ domains['hb'] }}:9000"
       accessKey: "{{ hostvars['truenas'].s3_admin_access_key }}"
       secretKey: "{{ hostvars['truenas'].s3_admin_secret_key }}"
       api: "S3v4"
