--- a/group_vars/minio/vars.yml
+++ b/group_vars/minio/vars.yml
@@ -2,6 +2,10 @@
 
 domain: "{{ domains['hb'] }}"
 
+s3_admin_access_key: "{{ vault_s3_admin_access_key }}"
+s3_admin_secret_key: "{{ vault_s3_admin_secret_key }}"
+s3_users: "{{ vault_s3_users }}"
+
 provisioned_disks:
   - dev: "/dev/disk/by-id/virtio-data01"
     vols:
