--- a/host_vars/theia/vars.yml
+++ b/host_vars/theia/vars.yml
@@ -2,3 +2,8 @@
 
 cpupower_start_governor: powersave
 cpupower_stop_governor: ondemand
+
+local_ips:
+  vm: "{{ home_net.vm.cidr | ansible.utils.ipaddr('2') | ansible.utils.ipaddr('address') }}"
+  general: "{{ home_net.general.cidr | ansible.utils.ipaddr('2') | ansible.utils.ipaddr('address') }}"
+  mgmt: "{{ home_net.mgmt.cidr | ansible.utils.ipaddr('2') | ansible.utils.ipaddr('address') }}"
