Configure sanoid on theia

--- a/playbooks/theia.yml
+++ b/playbooks/theia.yml
@@ -86,6 +86,9 @@
     - role: chezmoi
       tags: ["chezmoi"]
 
+    - role: sanoid
+      tags: ["sanoid"]
+
     - role: libvirt_vm
       tags: ["vms"]
 
